# synapse-crm

./: Makefile  README.md  context.md  manifest.json  mpak.json  pyproject.toml  server.json
schemas/: contact.schema.json  deal.schema.json  interaction.schema.json
seed/: sample-contacts.json  sample-deals.json  sample-interactions.json
skills/follow-up-coach/: SKILL.md
skills/pipeline-reviewer/: SKILL.md
src/synapse_crm/: __init__.py  server.py
src/synapse_crm/tools/: __init__.py  contact_timeline.py  find_or_create_contact.py  link_deals_to_contacts.py  log_interaction.py  move_deal_stage.py  pipeline_summary.py
tests/: conftest.py  test_server.py  test_tools.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  main.tsx
ui/src/components/: ContactDetail.tsx  DealCard.tsx  DealDetail.tsx  PipelineSummaryBar.tsx
ui/src/hooks/: useContacts.ts  useDeals.ts  usePipelineSummary.ts
ui/src/views/: ContactListView.tsx  PipelineView.tsx  RelationshipMap.tsx
